Remove absolute position of the pi notice text. Fixes bug causing overlap with long editorial notes.

--- a/app/assets/stylesheets/design/public_inspection.css.scss
+++ b/app/assets/stylesheets/design/public_inspection.css.scss
@@ -18,7 +18,6 @@
   bottom: 0;
   font-size: 12px;
   font-style: italic;
-  position:absolute;
 }
 
 .fr-box-public-inspection #fulltext_content_area {
